Fix issue where videos could overflow
props @cwpnolen

fixes #24

--- a/src/sass/wp-help.sass
+++ b/src/sass/wp-help.sass
@@ -111,6 +111,8 @@ $screen-small-min: 783px
 		text-shadow: 0 1px 0 white
 		a
 			text-decoration: none
+	.wp-video
+		overflow: hidden
 
 #cws-wp-help-settings
 	li
